--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>goit-js-hw-11</title>
+  <title>Homework 11</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -18,8 +18,7 @@
 
 <button type="button" class="load-more is-hidden">Load more</button>
 
-
-  <script src="./index.js"></script>
+<script src="./index.js"></script>
 </body>
 
 </html>
